Fix spacing for main page

--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -31,12 +31,12 @@ color: white;
 }
 
 #socials{
-margin-left: 42.5%;
+text-align: center;
 margin-top: 10px;
 }
 
 #about{
-margin-left: 36.5%;
+text-align: center;
 }
 
 figcaption {
